adds plots of key community player richness vs decay params

--- a/readme.Rmd
+++ b/readme.Rmd
@@ -44,8 +44,10 @@ write.csv(seqSamples, "derived_data/seqSamples.csv")
 #plot_sampleEffortCurves(comm.otu)
 
 #load taxon lookup info
+taxAndFunguild<-load_TaxAndFunguild(comm.otu)
 
-#load signif positively and negatively correlated OTUs, taxa
+#load residual signif correlated OTUs from boral Env+LV model
+residCor<-load_boralResidCors(taxAndFunguild)
 
 ```
 
@@ -171,11 +173,55 @@ Differences between Code initial microbial community composition does not explai
 
 
 
-
-
 ### Plot presence of key players vs decay param distances between species+size
 ```{r}
+source("code/otuIDs_fxns.R")
 
+# summarize the presence of ... in each sample
+sapro.df<-Calc_richOTUtype(colNam="Trophic.Mode", grepTerm="Sapro", taxAndFunguild, comm.otu)  
+basidio.df<-Calc_richOTUtype(colNam="phylum", grepTerm="Basid", taxAndFunguild, comm.otu)  
+path.df<-Calc_richOTUtype(colNam="Trophic.Mode", grepTerm="Patho", taxAndFunguild, comm.otu)  
+oomy.df<-Calc_richOTUtype(colNam="kingdom", grepTerm="Protist", taxAndFunguild, comm.otu)  
+```
+
+Saprotrophs
+```{r}
+pList<-Plot_richOTUtype(otutype.df=sapro.df, 
+                        valueCol_vec=c("ne.r2", "k","alpha"), 
+                        otutypeNam="Saprotroph", spdf)
+grid.arrange(pList[['ne.r2']] + guides(color=FALSE, shape=FALSE), 
+             pList[['k']] + guides(color=FALSE, shape=FALSE), 
+             pList[['alpha']] + guides(color=FALSE, shape=FALSE), ncol=2)
+```
+
+Basidios
+```{r}
+pList<-Plot_richOTUtype(otutype.df=basidio.df, 
+                        valueCol_vec=c("ne.r2", "k","alpha"), 
+                        otutypeNam="Basidio", spdf)
+grid.arrange(pList[['ne.r2']] + guides(color=FALSE, shape=FALSE), 
+             pList[['k']] + guides(color=FALSE, shape=FALSE), 
+             pList[['alpha']] + guides(color=FALSE, shape=FALSE), ncol=2)
+```
+
+Pathogens
+```{r}
+pList<-Plot_richOTUtype(otutype.df=path.df, 
+                        valueCol_vec=c("ne.r2", "k","alpha"), 
+                        otutypeNam="Pathogens", spdf)
+grid.arrange(pList[['ne.r2']] + guides(color=FALSE, shape=FALSE), 
+             pList[['k']] + guides(color=FALSE, shape=FALSE), 
+             pList[['alpha']] + guides(color=FALSE, shape=FALSE), ncol=2)
+```
+
+Oomycetes
+```{r}
+pList<-Plot_richOTUtype(otutype.df=oomy.df, 
+                        valueCol_vec=c("ne.r2", "k","alpha"), 
+                        otutypeNam="Oomycete", spdf)
+grid.arrange(pList[['ne.r2']] + guides(color=FALSE, shape=FALSE), 
+             pList[['k']] + guides(color=FALSE, shape=FALSE), 
+             pList[['alpha']] + guides(color=FALSE, shape=FALSE), ncol=2)
 ```
 
 
